# libcommon

./: CMakeLists.txt
build-aux/: FindPAPI.cmake  GoogleTest.cmake  LibBacktrace.cmake  SQLite3.cmake
include/: backtrace.hpp  database.hpp  error.hpp  filesystem.hpp  profiler.hpp  quantity.hpp  system.hpp  timer.hpp
include/lib/common/: backtrace.hpp  circular_array.hpp  cpu_topology.hpp  database.hpp  error.hpp  filesystem.hpp  math.hpp  optimisation.hpp  permutation.hpp  profiler.hpp  quantity.hpp  spinlock.hpp  static_index.hpp  system.hpp  timer.hpp
include/lib/common/details/: profiler.hpp  sorting_impl.hpp
src/: CMakeLists.txt  backtrace.cpp  cpu_topology.cpp  database.cpp  database.hpp  error.cpp  filesystem.cpp  math.cpp  optimisation.hpp  permutation.cpp  profiler.cpp  profiler.hpp  quantity.cpp  system_concurrency.cpp  system_introspection.cpp  timer.cpp
test/: CMakeLists.txt  test_profiler.cpp  test_quantity.cpp  test_timer.cpp
